Web Inspector: Dark Mode: disabled breakpoints banner is too light https://bugs.webkit.org/show_bug.cgi?id=188120 <rdar://problem/42671348>
Reviewed by Matt Baker.

* UserInterface/Views/DebuggerSidebarPanel.css:
(@media (prefers-dark-interface)):
(.sidebar > .panel.navigation.debugger .warning-banner):


Canonical link: https://commits.webkit.org/203337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234464 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DebuggerSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DebuggerSidebarPanel.css
@@ -123,3 +123,10 @@ body[dir=rtl] .sidebar > .panel.navigation.debugger .tree-outline.single-thread 
 .sidebar > .panel.navigation.debugger .details-section.xhr-breakpoints .item.breakpoint .subtitle {
     font-family: Menlo, monospace;
 }
+
+@media (prefers-dark-interface) {
+    .sidebar > .panel.navigation.debugger .warning-banner {
+        background-color: var(--yellow-highlight-background-color);
+        color: var(--yellow-highlight-text-color);
+    }
+}
